--- a/.github/workflows/custom-action.yml
+++ b/.github/workflows/custom-action.yml
@@ -4,7 +4,7 @@ on:
 
 jobs:
   my-job:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     name: A job to say hello
     steps:
       - name: Hello world action step
