--- a/.github/workflows/learn1.yaml
+++ b/.github/workflows/learn1.yaml
@@ -6,7 +6,7 @@ jobs:
     name: job1
     steps:
     - name: display message
-      run: echo "hello from job-one"
+      run: echo "hello from job-one ${{ github.event_name }}"
   job-two:
     runs-on: ubuntu-latest
     needs: [job-one]
